--- a/scss/style.scss
+++ b/scss/style.scss
@@ -262,6 +262,12 @@ a:hover {
   text-transform: uppercase;
   margin-top: 15px;
   box-shadow: 0 20px 30px -10px rgba(72, 134, 255, 0.49);
+  transition: 0.25s
+}
+
+.find-out-button:hover {
+  box-shadow: 0 20px 30px -10px rgb(72, 134, 255);
+  transition: 0.25s
 }
 
 .clients-img {
